--- a/utils/html/generate-forgetting-curve-with-task-duration.html
+++ b/utils/html/generate-forgetting-curve-with-task-duration.html
@@ -116,37 +116,50 @@
       startDate: '2025-08-24',
       reviewDays: '0,2,4,7,16',
       tasks: [
-        { name:'简单句的核心构成', duration:1 },
-        { name:'谓语动词时态', duration:1 },
-        { name:'谓语动词情态', duration:1 },
-        { name:'谓语动词语态', duration:1 },
-        { name:'谓语动词否定和强调', duration:1 },
-        { name:'限定词', duration:1 },
-        { name:'形容词、副词', duration:1 },
-        { name:'介词短语', duration:1 },
-        { name:'同位语、插入语', duration:1 },
-        { name:'非谓语动词做主宾表', duration:1 },
-        { name:'非谓语动词做定状', duration:2 },
-        { name:'并列句', duration:2 },
-        { name:'宾语从句', duration:2 },
-        { name:'表语从句', duration:2 },
-        { name:'主语从句', duration:2 },
-        { name:'同位语从句', duration:2 },
-        { name:'定语从句', duration:3 },
-        { name:'状语从句', duration:3 },
-        { name:'虚拟', duration:2 },
-        { name:'倒装', duration:2 },
-        { name:'强调', duration:2 },
-        { name:'断开长难句-标点', duration:2 },
-        { name:'断开长难句-连接词', duration:2 },
-        { name:'分析主谓', duration:2 },
-        { name:'简化长难句', duration:2 },
-        { name:'分裂结构', duration:2 },
-        { name:'嵌套结构', duration:2 },
-        { name:'平行结构', duration:2 },
+        {name: '简单句的核心构成', duration: 1},
+        {name: '谓语动词时态', duration: 1},
+        {name: '谓语动词情态', duration: 1},
+        {name: '谓语动词语态', duration: 1},
+        {name: '谓语动词否定和强调', duration: 1},
+        {name: '限定词', duration: 1},
+        {name: '形容词、副词', duration: 1},
+        {name: '介词短语', duration: 1},
+        {name: '同位语、插入语', duration: 1},
+        {name: '非谓语动词做主宾表', duration: 1},
+        {name: '非谓语动词做定状', duration: 2},
+        {name: '并列句', duration: 2},
+        {name: '宾语从句', duration: 3},
+        {name: '表语从句', duration: 1},
+        {name: '主语从句', duration: 1},
+        {name: '同位语从句', duration: 1},
+        {name: '定语从句', duration: 4},
+        {name: '状语从句', duration: 4},
+        {name: '虚拟', duration: 1},
+        {name: '倒装', duration: 2},
+        {name: '强调', duration: 1},
+        {name: '断开长难句-标点', duration: 1},
+        {name: '断开长难句-连接词', duration: 3},
+        {name: '分析主谓', duration: 1},
+        {name: '简化长难句', duration: 2},
+        {name: '分裂结构', duration: 3},
+        {name: '嵌套结构', duration: 2},
+        {name: '考场攻略-谓语动词时态', duration: 1},
+        {name: '考场攻略-谓语动词语态', duration: 1},
+        {name: '考场攻略-谓语动词变化', duration: 1},
+        {name: '考场攻略-简单句扩展', duration: 1},
+        {name: '考场攻略-非谓语动词作定语、状语', duration: 1},
+        {name: '考场攻略-名词性从句', duration: 1},
+        {name: '考场攻略-定语从句', duration: 1},
+        {name: '考场攻略-状语从句', duration: 1},
+        {name: '考场攻略-分析主谓', duration: 1},
+        {name: '考场攻略-简化长难句', duration: 1},
+        {name: '考场攻略-特殊结构的分析长难句', duration: 1},
       ],
-      rounds: ['书&笔记', {label: '视频', duration: 1}, {label: '笔记&Book训练', duration: 1}, { label: '笔记', duration: 1 }, {label: '笔记&App训练', duration: 1}, {label: '笔记', duration: 1}],
-      restDays: '2025-08-27,2025-08-29,2025-08-30,2025-09-02,2025-09-05,2025-09-06,2025-09-09,2025-09-13,2025-09-14,2025-09-20,2025-09-25,2025-09-30,2025-10-01,2025-10-02,2025-10-03,2025-10-04,2025-10-05,2025-10-07,2025-10-10,2025-10-18,2025-10-25'
+      rounds: ['书&笔记', {label: '视频', duration: 1}, {label: '笔记&Book训练', duration: 1}, {
+        label: '笔记',
+        duration: 1
+      }, {label: '笔记&App训练', duration: 1}, {label: '笔记', duration: 1}],
+      restDays: '2025-08-27,2025-08-29,2025-08-30,2025-09-02,2025-09-05,2025-09-06,2025-09-09,2025-09-13,2025-09-14,2025-09-19,2025-09-20,2025-10-02,2025-10-03,2025-10-04,2025-10-05,2025-10-06,2025-10-07,2025-10-11,2025-10-17,2025-10-18,2025-10-24,2025-10-25,2025-10-31,2025-11-01,2025-11-07,2025-11-08'
     },
     math: {
       startDate: '2025-08-11',
