--- a/english/write/compare.html
+++ b/english/write/compare.html
@@ -7,16 +7,13 @@
         body { font-family: Arial, sans-serif; margin: 20px; }
         textarea { width: 90%; height: 200px; margin-top: 10px; }
         label { font-weight: bold; display: block; margin-top: 10px; }
-        .diff { margin-top: 10px; white-space: pre-wrap; font-family: monospace; }
-        .added { background: #d4fcbc; }
-        .removed { background: #fbb6c2; }
-        .error { color: red; font-weight: bold; }
+        .diff { margin-top: 10px; white-space: pre-wrap; font-family: monospace; line-height: 1.5; }
+        .added { background: yellow; text-decoration: line-through; }
+        .removed { background: #fbb6c2; font-weight: bold; }
         table { border-collapse: collapse; margin-top: 10px; width: 100%; }
         th, td { border: 1px solid #ccc; padding: 5px; text-align: left; vertical-align: top; }
         .legend span { display: inline-block; margin-right: 10px; padding: 2px 5px; }
-        .green-bg { background: #d4fcbc; }
-        .red-bg { background: #fbb6c2; }
-        .red-text-green-bg { background: #d4fcbc; color: red; font-weight: bold; }
+        .red-text-green-bg { background: #d4fcbc; color: red; font-weight: bold; text-decoration: underline; }
     </style>
 </head>
 <body>
@@ -36,9 +33,9 @@
 
 <div class="legend">
     <strong>图例：</strong>
-    <span class="green-bg">绿色背景</span> = 多写单词，
-    <span class="red-bg">红色背景</span> = 漏写单词，
-    <span class="red-text-green-bg">红字绿底</span> = 拼写错误
+    <span class="added">黄色背景</span> = 多写单词，
+    <span class="removed">红色背景</span> = 漏写单词，
+    <span class="red-text-green-bg">(红字绿底)</span> = 拼写错误
 </div>
 
 <div id="result" class="diff"></div>
@@ -53,57 +50,57 @@
   // 初始化拼写字典
   async function initDictionary() {
     try {
-      const aff = await fetch("en_US.aff").then(r => r.text());
-      const dic = await fetch("en_US.dic").then(r => r.text());
-      dictionary = new Typo("en_US", aff, dic, { platform: "any" });
-      console.log("Dictionary loaded");
+      const aff = await fetch('en_US.aff').then(r => r.text());
+      const dic = await fetch('en_US.dic').then(r => r.text());
+      dictionary = new Typo('en_US', aff, dic, {platform: 'any'});
+      console.log('Dictionary loaded');
     } catch (e) {
-      console.warn("Dictionary not loaded, spelling check disabled");
+      console.warn('Dictionary not loaded, spelling check disabled');
     }
   }
 
   // 缩写表
   const contractions = {
-    "I'm": "I am",
-    "you're": "you are",
-    "he's": "he is",
-    "she's": "she is",
-    "it's": "it is",
-    "we're": "we are",
-    "they're": "they are",
-    "I've": "I have",
-    "you've": "you have",
-    "we've": "we have",
-    "they've": "they have",
-    "I'll": "I will",
-    "you'll": "you will",
-    "he'll": "he will",
-    "she'll": "she will",
-    "it'll": "it will",
-    "we'll": "we will",
-    "they'll": "they will",
-    "don't": "do not",
-    "doesn't": "does not",
-    "didn't": "did not",
-    "can't": "cannot",
-    "couldn't": "could not",
-    "won't": "will not",
-    "wouldn't": "would not",
-    "isn't": "is not",
-    "aren't": "are not",
-    "wasn't": "was not",
-    "weren't": "were not",
-    "let's": "let us",
-    "that's": "that is",
-    "there's": "there is",
-    "here's": "here is",
-    "what's": "what is",
-    "who's": "who is"
+    'I\'m': 'I am',
+    'you\'re': 'you are',
+    'he\'s': 'he is',
+    'she\'s': 'she is',
+    'it\'s': 'it is',
+    'we\'re': 'we are',
+    'they\'re': 'they are',
+    'I\'ve': 'I have',
+    'you\'ve': 'you have',
+    'we\'ve': 'we have',
+    'they\'ve': 'they have',
+    'I\'ll': 'I will',
+    'you\'ll': 'you will',
+    'he\'ll': 'he will',
+    'she\'ll': 'she will',
+    'it\'ll': 'it will',
+    'we\'ll': 'we will',
+    'they\'ll': 'they will',
+    'don\'t': 'do not',
+    'doesn\'t': 'does not',
+    'didn\'t': 'did not',
+    'can\'t': 'cannot',
+    'couldn\'t': 'could not',
+    'won\'t': 'will not',
+    'wouldn\'t': 'would not',
+    'isn\'t': 'is not',
+    'aren\'t': 'are not',
+    'wasn\'t': 'was not',
+    'weren\'t': 'were not',
+    'let\'s': 'let us',
+    'that\'s': 'that is',
+    'there\'s': 'there is',
+    'here\'s': 'here is',
+    'what\'s': 'what is',
+    'who\'s': 'who is'
   };
 
   function expandContractions(text) {
     for (const [abbr, full] of Object.entries(contractions)) {
-      const re = new RegExp(`\\b${abbr}\\b`, "g");
+      const re = new RegExp(`\\b${abbr}\\b`, 'g');
       text = text.replace(re, full);
     }
     return text;
@@ -111,7 +108,7 @@
 
   function checkSpelling(word) {
     if (!dictionary) return true;
-    const cleanWord = word.replace(/[^a-zA-Z']/g, "");
+    const cleanWord = word.replace(/[^a-zA-Z']/g, '');
     return cleanWord ? dictionary.check(cleanWord) : true;
   }
 
@@ -125,23 +122,36 @@
       .replace(/\r\n/g, '\n')
       .trim();
   }
+
   async function compare() {
-    const seq = document.getElementById("seq").value.trim();
-    const file = document.getElementById("files").files[0];
-    const textB = document.getElementById("textB").value;
-    const resultEl = document.getElementById("result");
-    const tableEl = document.getElementById("errorTable");
+    const seq = document.getElementById('seq').value.trim();
+    const file = document.getElementById('files').files[0];
+    const textB = document.getElementById('textB').value;
+    const resultEl = document.getElementById('result');
+    const tableEl = document.getElementById('errorTable');
     resultEl.innerHTML = '';
     tableEl.innerHTML = '';
 
-    if (!seq) { alert("请输入编号"); return; }
-    if (!file) { alert("请选择一个 Markdown 文件"); return; }
-    if (!textB) { alert("请输入需要对比的文章（Article B）"); return; }
+    if (!seq) {
+      alert('请输入编号');
+      return;
+    }
+    if (!file) {
+      alert('请选择一个 Markdown 文件');
+      return;
+    }
+    if (!textB) {
+      alert('请输入需要对比的文章（Article B）');
+      return;
+    }
 
     const content = await file.text();
-    const regex = new RegExp(`##\\s*${seq}([\\s\\S]*?)(?=\\n##|$)`, "i");
+    const regex = new RegExp(`##\\s*${seq}([\\s\\S]*?)(?=\\n##|$)`, 'i');
     const match = content.match(regex);
-    if (!match) { alert(`未找到编号 ${seq} 对应的文章`); return; }
+    if (!match) {
+      alert(`未找到编号 ${seq} 对应的文章`);
+      return;
+    }
 
     let textA = markdownToText(match[1]);
     const textA_exp = expandContractions(textA);
@@ -163,8 +173,8 @@
           const correct = removedWords[0];
           const wrong = addedWords[0];
           resultHTML += `<span style="color:green;">${correct}</span> `;
-          resultHTML += `<span class="red-text-green-bg">${wrong}</span> `;
-          errors.push({ word: wrong, correct: correct, type: "拼写错误" });
+          resultHTML += `<span class="red-text-green-bg">(${wrong})</span> `;
+          errors.push({word: wrong, correct: correct, type: '拼写错误'});
           i++; // 跳过下一个 added
           continue;
         }
@@ -172,23 +182,23 @@
 
       if (part.added) {
         const words = part.value.split(/\s+/).filter(Boolean);
-        words.forEach((w, idx) => {
-          const clean = w.replace(/[^a-zA-Z']/g, "");
+        words.forEach((w) => {
+          const clean = w.replace(/[^a-zA-Z']/g, '');
           if (clean && !checkSpelling(clean)) {
             // 拼写错误
             resultHTML += `<span class="red-text-green-bg">${w}</span> `;
-            errors.push({ word: w, correct: "", type: "拼写错误" });
+            errors.push({word: w, correct: '', type: '拼写错误'});
           } else {
             // 多写单词
             resultHTML += `<span class="added">${w}</span> `;
-            errors.push({ word: w, type: "多写" });
+            errors.push({word: w, type: '多写'});
           }
         });
       } else if (part.removed) {
         const words = part.value.split(/\s+/).filter(Boolean);
         words.forEach(w => {
           resultHTML += `<span class="removed">${w}</span> `;
-          errors.push({ word: w, type: "漏写" });
+          errors.push({word: w, type: '漏写'});
         });
       } else {
         resultHTML += part.value;
