feat: add object-clauses of noun-clauses

--- a/english/write/compare.html
+++ b/english/write/compare.html
@@ -23,7 +23,7 @@
 <input type="text" id="seq">
 
 <label for="textB">Your Article (with errors)：</label>
-<textarea id="textB" placeholder="Paste your article (Article B) here..."></textarea>
+<textarea id="textB" placeholder="Paste your article (Article B) here..." spellcheck="false"></textarea>
 
 <label for="files">Select Markdown file (contains correct articles)：</label>
 <input type="file" id="files" accept=".md">
