feat: complete Unit4

--- a/utils/html/generate-forgetting-curve-with-task-duration.html
+++ b/utils/html/generate-forgetting-curve-with-task-duration.html
@@ -126,21 +126,21 @@
     },
     write: {
       startDate: '2025-08-12',
-      reviewDays: '0,1,3,6,15,15,1,3,6,15,29',
+      reviewDays: '0,1,3,6,15,52,1,3,6,15,29',
       tasks: [
         {name: '002', duration: 1}, {name: '003', duration: 1}, {name: '004', duration: 1}, {name: '005', duration: 1},
         {name: '006', duration: 1}, {name: '007', duration: 1}, {name: '008', duration: 1}, {name: '009', duration: 1},
         {name: '010', duration: 1}, {name: '001', duration: 1}, {name: '011', duration: 1}, {name: '012', duration: 1},
         {name: '013', duration: 1}, {name: '014', duration: 1}, {name: '015', duration: 1}, {name: '016', duration: 1},
         {name: '041', duration: 1}, {name: '017', duration: 1}, {name: '042', duration: 1}, {name: '051', duration: 1},
-        {name: '018', duration: 1}, {name: '019', duration: 1}, {name: '052', duration: 1}, {name: '020', duration: 1},
-        {name: '053', duration: 1}, {name: '054', duration: 1}, {name: '055', duration: 1}, {name: '056', duration: 1},
+        {name: '018', duration: 1}, {name: '019', duration: 1}, {name: '052', duration: 1}, {name: '053', duration: 1},
+        {name: '054', duration: 1}, {name: '055', duration: 1}, {name: '056', duration: 1}, {name: '020', duration: 1},
         {name: '057', duration: 1}, {name: '058', duration: 1}, {name: '059', duration: 1}, {name: '060', duration: 1},
         {name: '043', duration: 1}, {name: '044', duration: 1}, {name: '045', duration: 1}, {name: '046', duration: 1},
         {name: '047', duration: 1}, {name: '048', duration: 1}, {name: '049', duration: 1}, {name: '050', duration: 1}
       ],
       rounds: ['学', '读', '读', '读', '读', '读 & New 听 & 写', 'New 听 & 写', 'New 中译英', 'New 中译英', 'New 默写1', 'New 默写2', 'New 默写3'],
-      restDays: '2025-08-19,2025-08-21,2025-08-24,2025-08-26,2025-08-28,2025-08-29,2025-08-30,2025-08-31,2025-09-02,2025-09-05,2025-09-06,2025-09-07,2025-09-10,2025-09-11,2025-09-12,2025-09-13,2025-09-14,2025-09-15,2025-09-17,2025-09-19,2025-09-20,2025-09-21,2025-09-22,2025-09-23,2025-09-27,2025-09-29,2025-09-30,2025-10-01,2025-10-02,2025-10-04,2025-10-05,2025-10-08,2025-10-09,2025-10-10,2025-10-14,2025-10-16,2025-10-17,2025-10-18,2025-10-19,2025-10-20,2025-10-24,2025-10-25,2025-10-26,2025-10-28,2025-10-30,2025-11-02,2025-11-03,2025-11-04,2025-11-05'
+      restDays: '2025-08-19,2025-08-21,2025-08-24,2025-08-26,2025-08-28,2025-08-29,2025-08-30,2025-08-31,2025-09-02,2025-09-05,2025-09-06,2025-09-07,2025-09-10,2025-09-11,2025-09-12,2025-09-13,2025-09-14,2025-09-15,2025-09-17,2025-09-19,2025-09-20,2025-09-21,2025-09-22,2025-09-23,2025-09-27,2025-09-29,2025-09-30,2025-10-01,2025-10-02,2025-10-07,2025-10-08,2025-10-09,2025-10-11,2025-10-13,2025-10-16,2025-10-17,2025-10-18,2025-10-21,2025-10-23,2025-10-25,2025-10-26,2025-10-28'
     },
     grammar: {
       startDate: '2025-08-24',
