--- a/utils/html/generate-forgetting-curve-with-task-duration.html
+++ b/utils/html/generate-forgetting-curve-with-task-duration.html
@@ -97,13 +97,16 @@
   // 默认数据
   const defaultData = {
     coreWord: {
-      startDate: '2025-10-01',
+      startDate: '2025-10-10',
       reviewDays: '0,1,3,6,15',
       tasks: [
         {name: 'Unit4', duration: 2},
         {name: 'Unit5', duration: 2},
         {name: 'Unit6', duration: 2},
         {name: 'Unit7', duration: 2},
+        {name: 'Unit1', duration: 2},
+        {name: 'Unit2', duration: 2},
+        {name: 'Unit3', duration: 2},
         {name: 'Unit8', duration: 2},
         {name: 'Unit9', duration: 2},
         {name: 'Unit10', duration: 2},
@@ -117,13 +120,10 @@
         {name: 'Unit18', duration: 2},
         {name: 'Unit19', duration: 2},
         {name: 'Unit20', duration: 2},
-        {name: 'Unit21', duration: 2},
-        {name: 'Unit1', duration: 2},
-        {name: 'Unit2', duration: 2},
-        {name: 'Unit3', duration: 2}
+        {name: 'Unit21', duration: 2}
       ],
-      rounds: ['精讲', {label: '笔记', duration: 1}, {label: '笔记', duration: 1}, '串讲', 'App', '笔记'],
-      restDays: ''
+      rounds: ['精讲', {label: '笔记', duration: 1}, {label: '笔记', duration: 1}, {label: 'App & 笔记', duration: 1}, {label: '笔记', duration: 1}, {label: '笔记', duration: 1}],
+      restDays: '2025-10-16,2025-10-21,2025-10-28,2025-11-02,2025-11-09,2025-11-12,2025-11-13,2025-11-15,2025-11-17,2025-11-19'
     },
     write: {
       startDate: '2025-08-12',
