--- a/utils/html/generate-forgetting-curve-with-task-duration.html
+++ b/utils/html/generate-forgetting-curve-with-task-duration.html
@@ -100,30 +100,54 @@
       startDate: '2025-10-10',
       reviewDays: '0,1,3,6,15',
       tasks: [
-        {name: 'Unit4', duration: 2},
-        {name: 'Unit5', duration: 2},
-        {name: 'Unit6', duration: 2},
-        {name: 'Unit1', duration: 3},
-        {name: 'Unit2', duration: 2},
-        {name: 'Unit3', duration: 2},
-        {name: 'Unit7', duration: 2},
-        {name: 'Unit8', duration: 2},
-        {name: 'Unit9', duration: 2},
-        {name: 'Unit10', duration: 2},
-        {name: 'Unit11', duration: 2},
-        {name: 'Unit12', duration: 2},
-        {name: 'Unit13', duration: 2},
-        {name: 'Unit14', duration: 2},
-        {name: 'Unit15', duration: 2},
-        {name: 'Unit16', duration: 2},
-        {name: 'Unit17', duration: 2},
-        {name: 'Unit18', duration: 2},
-        {name: 'Unit19', duration: 2},
-        {name: 'Unit20', duration: 2},
-        {name: 'Unit21', duration: 2}
+        {name: 'Unit4-1', duration: 1},
+        {name: 'Unit4-2', duration: 1},
+        {name: 'Unit5-1', duration: 1},
+        {name: 'Unit5-2', duration: 1},
+        {name: 'Unit6-1', duration: 1},
+        {name: 'Unit6-2', duration: 1},
+        {name: 'Unit1-1', duration: 1},
+        {name: 'Unit1-2', duration: 1},
+        {name: 'Unit2-1', duration: 1},
+        {name: 'Unit2-2', duration: 1},
+        {name: 'Unit9-1', duration: 1},
+        {name: 'Unit9-2', duration: 1},
+        {name: 'Unit3-1', duration: 1},
+        {name: 'Unit3-2', duration: 1},
+        {name: 'Unit7-1', duration: 1},
+        {name: 'Unit7-2', duration: 1},
+        {name: 'Unit8-1', duration: 1},
+        {name: 'Unit8-2', duration: 1},
+        {name: 'Unit10-1', duration: 1},
+        {name: 'Unit10-2', duration: 1},
+        {name: 'Unit11-1', duration: 1},
+        {name: 'Unit11-2', duration: 1},
+        {name: 'Unit12-1', duration: 1},
+        {name: 'Unit12-2', duration: 1},
+        {name: 'Unit13-1', duration: 1},
+        {name: 'Unit13-2', duration: 1},
+        {name: 'Unit14-1', duration: 1},
+        {name: 'Unit14-2', duration: 1},
+        {name: 'Unit15-1', duration: 1},
+        {name: 'Unit15-2', duration: 1},
+        {name: 'Unit16-1', duration: 1},
+        {name: 'Unit16-2', duration: 1},
+        {name: 'Unit17-1', duration: 1},
+        {name: 'Unit17-2', duration: 1},
+        {name: 'Unit18-1', duration: 1},
+        {name: 'Unit18-2', duration: 1},
+        {name: 'Unit19-1', duration: 1},
+        {name: 'Unit19-2', duration: 1},
+        {name: 'Unit20-1', duration: 1},
+        {name: 'Unit20-2', duration: 1},
+        {name: 'Unit21-1', duration: 1},
+        {name: 'Unit21-2', duration: 1}
       ],
-      rounds: ['精讲', {label: '笔记', duration: 1}, {label: '笔记', duration: 1}, {label: 'App & 笔记', duration: 1}, {label: '笔记', duration: 1}, {label: '笔记', duration: 1}],
-      restDays: '2025-10-21,2025-10-28,2025-11-02,2025-11-09,2025-11-12,2025-11-13,2025-11-15,2025-11-17,2025-11-19'
+      rounds: ['精讲', {label: '笔记', duration: 1}, {label: '笔记', duration: 1}, {
+        label: 'App & 笔记',
+        duration: 1
+      }, {label: '笔记', duration: 1}, {label: '笔记', duration: 1}],
+      restDays: '2025-10-16,2025-10-23,2025-10-24,2025-10-27,2025-10-28'
     },
     write: {
       startDate: '2025-08-12',
