--- a/utils/html/generate-forgetting-curve-with-task-duration.html
+++ b/utils/html/generate-forgetting-curve-with-task-duration.html
@@ -237,7 +237,7 @@
       restDays: '2025-08-29,2025-08-30,2025-09-02,2025-09-03,2025-09-04,2025-09-05,2025-09-09,2025-09-10,2025-09-11,2025-09-13,2025-09-16,2025-09-19,2025-09-20'
     },
     advancedMath: {
-      startDate: '2025-10-12',
+      startDate: '2025-10-21',
       reviewDays: '0,2,4,0,0,3,0,3,7,2,15,0,16',
       tasks: [
         {name: '函数极限与连续', duration: 5},
@@ -251,7 +251,7 @@
         {name: '一元函数积分学的计算', duration: 5},
         {name: '一元函数积分学的几何应用', duration: 5},
         {name: '一元函数积分学的积分（不）等式应用', duration: 5},
-        {name: '一元函数积分学的物理与经济应用', duration: 5},
+        // {name: '一元函数积分学的物理与经济应用', duration: 5},
         {name: '多元函数微分学', duration: 5},
         {name: '二重积分', duration: 5},
         {name: '微分方程', duration: 5}
