--- a/utils/html/generate-forgetting-curve-with-task-duration.html
+++ b/utils/html/generate-forgetting-curve-with-task-duration.html
@@ -112,6 +112,8 @@
         {name: 'Unit2-2', duration: 1},
         {name: 'Unit9-1', duration: 1},
         {name: 'Unit9-2', duration: 1},
+        {name: 'Unit13-1', duration: 1},
+        {name: 'Unit13-2', duration: 1},
         {name: 'Unit3-1', duration: 1},
         {name: 'Unit3-2', duration: 1},
         {name: 'Unit7-1', duration: 1},
@@ -124,8 +126,6 @@
         {name: 'Unit11-2', duration: 1},
         {name: 'Unit12-1', duration: 1},
         {name: 'Unit12-2', duration: 1},
-        {name: 'Unit13-1', duration: 1},
-        {name: 'Unit13-2', duration: 1},
         {name: 'Unit14-1', duration: 1},
         {name: 'Unit14-2', duration: 1},
         {name: 'Unit15-1', duration: 1},
@@ -147,7 +147,8 @@
         label: 'App & 笔记',
         duration: 1
       }, {label: '笔记', duration: 1}, {label: '笔记', duration: 1}],
-      restDays: '2025-10-16,2025-10-23,2025-10-24,2025-10-27,2025-10-28'
+      restDays: '2025-10-16,2025-10-23,2025-10-24,2025-10-27,2025-10-31,2025-11-01,2025-11-06,2025-11-08,2025-11-09,2025-11-10,2025-11-11,2025-11-15,2025-11-16,2025-11-18,2025-11-20,2025-11-25,2025-11-26,2025-11-27,2025-12-01,2025-12-03,2025-12-05,2025-12-07,2025-12-11,2025-12-12,2025-12-13'
+      // restDays: '2025-10-26,2025-10-27,2025-10-28,2025-10-31,2025-11-04,2025-11-05,2025-11-09,2025-11-12,2025-11-10,2025-11-13,2025-11-14,2025-11-17,2025-11-19,2025-11-21,2025-11-22,2025-11-28,2025-11-29,2025-12-01,2025-12-03,2025-12-06,2025-12-07,2025-12-08,2025-12-11'
     },
     write: {
       startDate: '2025-08-12',
