--- a/utils/html/generate-forgetting-curve-with-task-duration.html
+++ b/utils/html/generate-forgetting-curve-with-task-duration.html
@@ -196,9 +196,10 @@
         {name: '断开长难句-标点', duration: 1},
         {name: '断开长难句-连接词', duration: 3},
         {name: '分析主谓', duration: 1},
-        {name: '简化长难句', duration: 2},
+        {name: '简化长难句', duration: 1},
         {name: '分裂结构', duration: 3},
-        {name: '嵌套结构', duration: 2},
+        {name: '嵌套结构', duration: 1},
+        {name: '平行结构', duration: 3},
         {name: '考场攻略-谓语动词时态', duration: 1},
         {name: '考场攻略-谓语动词语态', duration: 1},
         {name: '考场攻略-谓语动词变化', duration: 1},
@@ -215,7 +216,7 @@
         label: '笔记',
         duration: 1
       }, {label: '笔记&App训练', duration: 1}, {label: '笔记', duration: 1}],
-      restDays: '2025-08-27,2025-08-29,2025-08-30,2025-09-02,2025-09-05,2025-09-06,2025-09-09,2025-09-13,2025-09-14,2025-09-19,2025-09-20,2025-09-22,2025-09-23,2025-09-24,2025-10-02,2025-10-03,2025-10-04,2025-10-05,2025-10-06,2025-10-07,2025-10-11,2025-10-17,2025-10-18,2025-10-24,2025-10-25,2025-10-31,2025-11-01,2025-11-07,2025-11-08'
+      restDays: '2025-08-27,2025-08-29,2025-08-30,2025-09-02,2025-09-05,2025-09-06,2025-09-09,2025-09-13,2025-09-14,2025-09-19,2025-09-20,2025-09-22,2025-09-23,2025-09-24,2025-10-02,2025-10-03,2025-10-04,2025-10-05,2025-10-06,2025-10-07,2025-10-11,2025-10-14,2025-10-17,2025-10-18,2025-10-24,2025-10-25,2025-11-01'
     },
     linearAlgebra: {
       startDate: '2025-08-11',
@@ -478,7 +479,7 @@
     }
     html2canvas(calendarDiv).then(canvas => {
       const link = document.createElement('a');
-      link.download = '学习计划.png';
+      link.download = 'plan.png';
       link.href = canvas.toDataURL('image/png');
       link.click();
     });
